# fast_api

./: database.db  pyproject.toml
database/: sql_model_01.py
fast_api/: main.py
tests/: test_prod.py
