[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["FabioD95 <fabio.delrio95@gmail.com>"]
readme = "README.md"
packages = [{include = "fast_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
requests = "^2.28.2"
bs4 = "^0.0.1"
colorama = "^0.4.6"
httpx = "^0.23.3"
python-dateutil = "^2.8.2"
uvicorn = "^0.20.0"
gunicorn = "^20.1.0"
pydantic = "^1.10.5"
pytest = "^7.2.1"
sqlalchemy = "^2.0.4"
psycopg2-binary = "^2.9.5"
unidecode = "^1.3.6"
pyyaml = "^6.0"
pyramid = "^2.0.1"
pyaml = "^21.10.1"
passlib = "^1.7.4"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
bcrypt = "^4.0.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
flake8-builtins = "^2.1.0"
flake8-isort = "^6.0.0"
flake8 = "^6.0.0"
bandit = "^1.7.4"
black = "^23.1.0"
mypy = "^1.0.1"
flake8-bandit = "^4.1.1"
flake8-mypy = "^17.8.0"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^4.0.0"
autoflake = "^2.0.1"
ipython = "^8.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
